--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,21 @@
+* {
+    box-sizing: border-box;
+}
+
+
 body {
-    background-color: skyblue;
+    background-color: #fcfcfd;
+}
+
+footer {
+    background-color: #0a0a0a;
+}
+
+footer a {
+    color: #fcfcfd;
+}
+
+.footer-flex {
+    display: flex;
+    justify-content: space-between;
 }
