--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,14 +17,16 @@
 <header>
     <h1><a href="{{ path('homepage') }}">Guestbook</a></h1>
     <ul>
-{#        {% for conference in conferences %}#}
-{#            <li><a href="{{ path('conference', { id: conference.id }) }}">{{ conference }}</a></li>#}
-{#        {% endfor %}#}
+        {% for conference in conferences %}
+            <li><a href="{{ path('conference', { slug: conference.slug }) }}">{{ conference }}</a></li>
+        {% endfor %}
     </ul>
     <hr/>
 </header>
+<main>
+    {% block body %}{% endblock %}
+</main>
 
-{% block body %}{% endblock %}
 {% block footer %}
     <footer id="footer">
 
