--- a/templates/page/edit.html.twig
+++ b/templates/page/edit.html.twig
@@ -7,7 +7,8 @@
 
     {{ include('page/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_page_index') }}">back to list</a>
+    <a class="btn btn-secondary" href="{{ path('app_page_index') }}">back to list</a>
+    <br />
 
     {{ include('page/_delete_form.html.twig') }}
 {% endblock %}
