--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -5,6 +5,11 @@
 {% block body %}
     <h1>Blog index</h1>
 
+    {{ form_start(formSearch) }}
+    {{ form_widget(formSearch) }}
+        <button class="btn btn-primary">{{ button_label|default('Search') }}</button>
+    {{ form_end(formSearch) }}
+
     <table class="table">
         <thead>
             <tr>
