--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -110,11 +110,11 @@
   <body>
 <header>
     <h1><a href="{{ path('homepage') }}">Guestbook</a></h1>
-    <ul>
-        {% for conference in conferences %}
-            <li><a href="{{ path('conference', { slug: conference.slug }) }}">{{ conference }}</a></li>
-        {% endfor %}
-    </ul>
+{#    <ul>#}
+{#        {% for conference in conferences %}#}
+{#            <li><a href="{{ path('conference', { slug: conference.slug }) }}">{{ conference }}</a></li>#}
+{#        {% endfor %}#}
+{#    </ul>#}
     <hr/>
 </header>
 <main>
