Added blog block to homepage, added user blog Controller and voters for blog to restrict access to blog posts

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -24,3 +24,14 @@ main {
     max-width: 1200px;
     margin: 0 auto;
 }
+
+.container.blogs {
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
+.container.blogs .blog-item {
+    /*flex: 1;*/
+    width: 32%;
+}
