--- a/templates/blog/show.html.twig
+++ b/templates/blog/show.html.twig
@@ -50,9 +50,15 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_blog_index') }}">back to list</a>
 
-    <a href="{{ path('app_blog_edit', {'id': blog.id}) }}">edit</a>
+
+    {% if is_granted("ROLE_ADMIN") %}
+        <a href="{{ path('app_blog_index') }}">back to list</a>
+        <a href="{{ path('app_blog_edit', {'id': blog.id}) }}">edit</a>
+    {% else %}
+        <a href="{{ path('app_user_blog_index') }}">back to list</a>
+        <a href="{{ path('app_user_blog_edit', {'id': blog.id}) }}">edit</a>
+    {% endif %}
 
     {{ include('blog/_delete_form.html.twig') }}
 {% endblock %}
