--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -34,8 +34,9 @@
             </div>
         #}
 
-        <button class="btn btn-lg btn-primary" type="submit">
+        <button class="btn btn-lg btn-primary m-2" type="submit">
             Sign in
         </button>
     </form>
+    <a href="{{ path('app_register') }}">Зарегистрироваться</a>
 {% endblock %}
