--- a/templates/page/edit.html.twig
+++ b/templates/page/edit.html.twig
@@ -7,7 +7,11 @@
 
     {{ include('page/_form.html.twig', {'button_label': 'Update'}) }}
 
+    {% if is_granted("ROLE_ADMIN") %}
     <a class="btn btn-secondary" href="{{ path('app_page_index') }}">back to list</a>
+    {% else %}
+        <a class="btn btn-secondary" href="{{ path('app_user_page_index') }}">back to list</a>
+    {% endif %}
     <br />
 
     {{ include('page/_delete_form.html.twig') }}
