--- a/templates/page/index.html.twig
+++ b/templates/page/index.html.twig
@@ -19,6 +19,9 @@
                 <th>Body</th>
                 <th>Status</th>
                 <th>Author</th>
+                {% if is_granted("ROLE_ADMIN") %}
+                    <th>Owner</th>
+                {% endif %}
                 <th>actions</th>
             </tr>
         </thead>
@@ -30,10 +33,20 @@
                 <td>{{ page.body }}</td>
                 <td>{{ page.status ? 'Yes' : 'No' }}</td>
                 <td>{{ page.author }}</td>
+                {% if is_granted("ROLE_ADMIN") %}
+                    <td>{{ page.user }}</td>
+                {% endif %}
+
                 <td>
-                    <a href="{{ path('app_page_show', {'id': page.id}) }}">show</a>
-                    <a href="{{ path('app_page_edit', {'id': page.id}) }}">edit</a>
-                </td>
+                    {% if is_granted("ROLE_ADMIN") %}
+                        {# For admin user #}
+                        <a href="{{ path('app_page_show', {'id': page.id}) }}">show</a>
+                        <a href="{{ path('app_page_edit', {'id': page.id}) }}">edit</a>
+                    {% else %}
+                        {# For user #}
+                        <a href="{{ path('app_user_page_show', {'id': page.id}) }}">show</a>
+                        <a href="{{ path('app_user_page_edit', {'id': page.id}) }}">edit</a>
+                    {% endif %}
             </tr>
         {% else %}
             <tr>
@@ -42,6 +55,9 @@
         {% endfor %}
         </tbody>
     </table>
-
+    {% if is_granted("ROLE_ADMIN") %}
     <a href="{{ path('app_page_new') }}">Create new</a>
+        {% else %}
+            <a href="{{ path('app_user_page_new') }}">Create new</a>
+    {% endif %}
 {% endblock %}
