--- a/templates/page/new.html.twig
+++ b/templates/page/new.html.twig
@@ -7,5 +7,9 @@
 
     {{ include('page/_form.html.twig') }}
 
-    <a href="{{ path('app_page_index') }}">back to list</a>
+    {% if is_granted("ROLE_ADMIN") %}
+        <a href="{{ path('app_page_index') }}">back to list</a>
+    {% else %}
+        <a href="{{ path('app_user_page_index') }}">back to list</a>
+    {% endif %}
 {% endblock %}
