--- a/templates/page/show.html.twig
+++ b/templates/page/show.html.twig
@@ -40,9 +40,13 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_page_index') }}">back to list</a>
-
-    <a href="{{ path('app_page_edit', {'id': page.id}) }}">edit</a>
+    {% if is_granted("ROLE_ADMIN") %}
+        <a href="{{ path('app_page_index') }}">back to list</a>
+        <a href="{{ path('app_page_edit', {'id': page.id}) }}">edit</a>
+    {% else %}
+        <a href="{{ path('app_user_page_index') }}">back to list</a>
+        <a href="{{ path('app_user_page_edit', {'id': page.id}) }}">edit</a>
+    {% endif %}
 
     {{ include('page/_delete_form.html.twig') }}
 {% endblock %}
