--- a/templates/page/index.html.twig
+++ b/templates/page/index.html.twig
@@ -26,7 +26,7 @@
             </tr>
         </thead>
         <tbody>
-        {% for page in pages %}
+        {% for page in pagination %}
             <tr>
                 <td>{{ page.id }}</td>
                 <td>{{ page.title }}</td>
@@ -55,6 +55,11 @@
         {% endfor %}
         </tbody>
     </table>
+
+    <div class="navigation">
+        {{ knp_pagination_render(pagination) }}
+    </div>
+
     {% if is_granted("ROLE_ADMIN") %}
     <a href="{{ path('app_page_new') }}">Create new</a>
         {% else %}
