--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -14,7 +14,7 @@
             </tr>
         </thead>
         <tbody>
-        {% for user in users %}
+        {% for user in pagination %}
             <tr>
                 <td>{{ user.id }}</td>
                 <td>{{ user.email }}</td>
@@ -31,6 +31,9 @@
         {% endfor %}
         </tbody>
     </table>
+    <div class="navigation">
+        {{ knp_pagination_render(pagination) }}
+    </div>
 
     <a href="{{ path('app_user_new') }}">Create new</a>
 {% endblock %}
