--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -111,53 +111,56 @@
 <header>
     {#    <h1><a href="{{ path('homepage') }}">Guestbook</a></h1> #}
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container">
-                <a class="navbar-brand" href="#">Navbar</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="{{ path('app_default_home') }}">Home</a></li>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="{{ path('app_default_home') }}">Home</a></li>
+                    {% if app.user %}
                         <li class="nav-item"><a class="nav-link" href="{{ path('app_logout') }}">Logout</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{{ path('app_user_index') }}">Users</a></li>
-                        {% if is_granted("ROLE_ADMIN") %}
-                            <li class="nav-item"><a class="nav-link" href="{{ path('app_blog_index') }}">Blogs</a></li>
-                            {% else %}
-                                <li class="nav-item"><a class="nav-link" href="{{ path('app_user_blog_index') }}">Blogs</a></li>
-                        {% endif %}
-
-                        {% if is_granted("ROLE_ADMIN") %}
-                        <li class="nav-item"><a class="nav-link" href="{{ path('app_page_index') }}">Pages</a></li>
-                            {% else %}
-                                <li class="nav-item"><a class="nav-link" href="{{ path('app_user_page_index') }}">Pages</a></li>
-                        {% endif %}
-
-                        {% if is_granted("ROLE_ADMIN") %}
-
-                            <li class="nav-item">
-                                <a
-                                        class="nav-link"
-                                        href="{{ path('app_user_show', {'id': app.user.id}) }}">
-                                    Hi {{ app.user.email }}
-                                </a></li>
-                        {% endif %}
-                    </ul>
-                </div>
-
-                <div class="weather">
-                    {% if weather.getWeather() %}
-                     {{ weather.getWeather().current.temperature_2m }} &deg;C
                     {% endif %}
-                </div>
+                    {% if app.user is null %}
+                        <li class="nav-item"><a class="nav-link" href="{{ path('app_login') }}">Login</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ path('app_register') }}">Register</a></li>
+                    {% endif %}
+                    <li class="nav-item"><a class="nav-link" href="{{ path('app_user_index') }}">Users</a></li>
+                    {% if is_granted("ROLE_ADMIN") %}
+                        <li class="nav-item"><a class="nav-link" href="{{ path('app_blog_index') }}">Blogs</a></li>
+                    {% else %}
+                        <li class="nav-item"><a class="nav-link" href="{{ path('app_user_blog_index') }}">Blogs</a></li>
+                    {% endif %}
 
+                    {% if is_granted("ROLE_ADMIN") %}
+                        <li class="nav-item"><a class="nav-link" href="{{ path('app_page_index') }}">Pages</a></li>
+                    {% else %}
+                        <li class="nav-item"><a class="nav-link" href="{{ path('app_user_page_index') }}">Pages</a></li>
+                    {% endif %}
+
+                    {% if app.user %}
+                        <li class="nav-item">
+                            <a class="nav-link"
+                                    href="{{ path('app_user_show', {'id': app.user.id}) }}">
+                                Hi, {{ app.user.email }} !
+                            </a></li>
+                    {% endif %}
+                </ul>
             </div>
 
+            <div class="weather">
+                {% if weather.getWeather() %}
+                    {{ weather.getWeather().current.temperature_2m }} &deg;C
+                {% endif %}
+            </div>
 
-        </nav>
+        </div>
 
+
+    </nav>
 
 
     {#    <ul> #}
