--- a/templates/page/show.html.twig
+++ b/templates/page/show.html.twig
@@ -4,6 +4,7 @@
 
 {% block body %}
     <h1>Page</h1>
+    <h3>Hello page</h3>
 
     <table class="table">
         <tbody>
@@ -30,7 +31,7 @@
              <tr>
                 <th>Tags</th>
                 {# <td>{{ page.tags }}</td> #}
-                <td>{{ page_tags|join(',') }}</td> 
+                <td>{{ page_tags|join(',') }}</td>
                 
                {#  {% for page_tag in page.tags %}
                 {{ page_tag.name }}
