--- a/templates/blog/show.html.twig
+++ b/templates/blog/show.html.twig
@@ -7,56 +7,58 @@
 
     <table class="table">
         <tbody>
+        <tr>
+            <th>Id</th>
+            <td>{{ blog.id }}</td>
+        </tr>
+        <tr>
+            <th>Title</th>
+            <td>{{ blog.title }}</td>
+        </tr>
+        <tr>
+            <th>Description</th>
+            <td>{{ blog.description }}</td>
+        </tr>
+        <tr>
+            <th>Text</th>
+            <td>{{ blog.text }}</td>
+        </tr>
+        {% if blog.category %}
             <tr>
-                <th>Id</th>
-                <td>{{ blog.id }}</td>
-            </tr>
-            <tr>
-                <th>Title</th>
-                <td>{{ blog.title }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ blog.description }}</td>
-            </tr>
-            <tr>
-                <th>Text</th>
-                <td>{{ blog.text }}</td>
-            </tr>
-            {% if blog.category %}
-             <tr>
                 <th>Category</th>
                 <td>{{ blog.category }}</td>
                 <td>{{ blog.category.fullname }}</td>
             </tr>
-            {% endif %}
-             {% if blog.blogCollection %}
-             <tr>
+        {% endif %}
+        {% if blog.blogCollection %}
+            <tr>
                 <th>Blog Collection</th>
                 <td>{{ blog.blogCollection.name }}</td>
             </tr>
-            {% endif %}
+        {% endif %}
 
-             <tr>
-                <th>Tags</th>
-                {# <td>{{ page.tags }}</td> #}
-                <td>{{ blog_tags|join(',') }}</td> 
-                
-               {#  {% for page_tag in page.tags %}
+        <tr>
+            <th>Tags</th>
+            {# <td>{{ page.tags }}</td> #}
+            <td>{{ blog_tags|join(',') }}</td>
+
+            {#  {% for page_tag in page.tags %}
                 {{ page_tag.name }}
                 {% endfor %} #}
 
-            </tr>
+        </tr>
         </tbody>
     </table>
 
     {% if is_granted("ROLE_ADMIN") %}
         <a href="{{ path('app_blog_index') }}">back to list</a>
         <a href="{{ path('app_blog_edit', {'id': blog.id}) }}">edit</a>
-    {% else %}
+    {% endif %}
+    {% if is_granted("ROLE_USER") %}
         <a href="{{ path('app_user_blog_index') }}">back to list</a>
         <a href="{{ path('app_user_blog_edit', {'id': blog.id}) }}">edit</a>
     {% endif %}
-
-    {{ include('blog/_delete_form.html.twig') }}
+    {% if is_granted("ROLE_ADMIN") %}
+        {{ include('blog/_delete_form.html.twig') }}
+    {% endif %}
 {% endblock %}
