--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -28,10 +28,10 @@
         <div class="col-md-4 blog-item">
             <h2>{{ blog.title }}</h2>
             <p>
-                {{ blog.description }}
+                {{ blog.description | u.truncate(160, '...') }}
             </p>
             <p>
-                <a href="" class="btn btn-secondary" role="button">View details</a>
+                <a href="{{ url('blog_view', {id: blog.id}) }}" class="btn btn-secondary" role="button">View details</a>
             </p>
         </div>
 
