--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -30,6 +30,7 @@
             {% if is_granted("ROLE_ADMIN") %}
                 <th>Owner</th>
             {% endif %}
+            <th>Updated at</th>
             <th>actions</th>
         </tr>
         </thead>
@@ -55,6 +56,8 @@
                 {% if is_granted("ROLE_ADMIN") %}
                     <td>{{ blog.user }}</td>
                 {% endif %}
+
+                <td>{{ blog.updatedAtFormated }}</td>
 
                 <td>
                     {% if is_granted("ROLE_ADMIN") %}
